[gd_scene load_steps=14 format=3 uid="uid://btvde11rkpj7c"]

[ext_resource type="Script" path="res://burgerparts.gd" id="1_6kawm"]
[ext_resource type="Texture2D" uid="uid://btyksugq7jjrt" path="res://assets/burger-bottom.png" id="1_kqa3j"]
[ext_resource type="Texture2D" uid="uid://dmk58jvd3td0f" path="res://assets/cheese.png" id="2_ag4c1"]
[ext_resource type="Texture2D" uid="uid://biujcljfjao67" path="res://assets/kitchen.jpg" id="2_jnl37"]
[ext_resource type="Texture2D" uid="uid://cikvlc12ok1re" path="res://assets/lettuce.png" id="3_asvfj"]
[ext_resource type="Texture2D" uid="uid://dlceavs2wbm2t" path="res://assets/burger-top.png" id="4_bddjj"]
[ext_resource type="Texture2D" uid="uid://2e3w0hkfsg3e" path="res://assets/beef.png" id="5_uw2la"]
[ext_resource type="Texture2D" uid="uid://b4v3ou2vmcg1a" path="res://assets/tomato.png" id="6_k1cjq"]
[ext_resource type="Texture2D" uid="uid://blfcdx82dyigq" path="res://assets/Takeout.png" id="9_3qdy2"]

[sub_resource type="Theme" id="Theme_obrph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcini"]
size = Vector2(640, 431.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bihd"]
size = Vector2(132, 339)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vapkt"]
size = Vector2(129, 343)

[node name="burgerparts" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_obrph")
script = ExtResource("1_6kawm")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jnl37")
stretch_mode = 6

[node name="IngredientsLeft" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -67.5
offset_right = 55.0
offset_bottom = 68.5
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 20
alignment = 1

[node name="BurgerBottom" type="Button" parent="IngredientsLeft"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("1_kqa3j")
icon_alignment = 1

[node name="Cheese" type="Button" parent="IngredientsLeft"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_ag4c1")
icon_alignment = 1

[node name="Lettuce" type="Button" parent="IngredientsLeft"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_asvfj")
icon_alignment = 1

[node name="IngredientsRight" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -67.5
offset_right = -34.0
offset_bottom = 68.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 20
alignment = 1

[node name="BurgerTop" type="Button" parent="IngredientsRight"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("4_bddjj")
icon_alignment = 1

[node name="Burger" type="Button" parent="IngredientsRight"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("5_uw2la")
icon_alignment = 1

[node name="Tomato" type="Button" parent="IngredientsRight"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("6_k1cjq")
icon_alignment = 1

[node name="Instructions" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 108.0
grow_horizontal = 2

[node name="RequestView" type="HBoxContainer" parent="Instructions"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -185.5
offset_right = 61.5
offset_bottom = 71.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
alignment = 1

[node name="BottomUI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -107.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="Button" type="Button" parent="BottomUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "SERVE!"

[node name="Timer" type="Timer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(191, 786.75)
shape = SubResource("RectangleShape2D_fcini")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(344, 430)
shape = SubResource("RectangleShape2D_1bihd")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(25.5, 430)
shape = SubResource("RectangleShape2D_vapkt")

[node name="Takeout" type="Sprite2D" parent="."]
position = Vector2(180, 443)
texture = ExtResource("9_3qdy2")

[node name="IngredientGroup" type="Node2D" parent="."]
position = Vector2(-21, 21)

[connection signal="button_down" from="IngredientsLeft/BurgerBottom" to="." method="_on_part_button_down" binds= [0]]
[connection signal="button_up" from="IngredientsLeft/BurgerBottom" to="." method="_on_part_button_up"]
[connection signal="button_down" from="IngredientsLeft/Cheese" to="." method="_on_part_button_down" binds= [1]]
[connection signal="button_up" from="IngredientsLeft/Cheese" to="." method="_on_part_button_up"]
[connection signal="button_down" from="IngredientsLeft/Lettuce" to="." method="_on_part_button_down" binds= [2]]
[connection signal="button_up" from="IngredientsLeft/Lettuce" to="." method="_on_part_button_up"]
[connection signal="button_down" from="IngredientsRight/BurgerTop" to="." method="_on_part_button_down" binds= [5]]
[connection signal="button_up" from="IngredientsRight/BurgerTop" to="." method="_on_part_button_up"]
[connection signal="button_down" from="IngredientsRight/Burger" to="." method="_on_part_button_down" binds= [3]]
[connection signal="button_up" from="IngredientsRight/Burger" to="." method="_on_part_button_up"]
[connection signal="button_down" from="IngredientsRight/Tomato" to="." method="_on_part_button_down" binds= [4]]
[connection signal="button_up" from="IngredientsRight/Tomato" to="." method="_on_part_button_up"]
[connection signal="pressed" from="BottomUI/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
